@@ -278,6 +278,16 @@ echo then >> ~/.bashrc
 echo "  source /home/pi/portsdown/scripts/startup.sh" >> ~/.bashrc
 echo fi >> ~/.bashrc
 
+echo
+echo "--------------------------------------"
+echo "----- Configure the Menu Aliases -----"
+echo "--------------------------------------"
+
+# Install the menu aliases
+echo "alias menu='/home/pi/portsdown/scripts/menu.sh'" >> /home/pi/.bash_aliases
+echo "alias rptr='/home/pi/portsdown/scripts/rptr.sh'" >> /home/pi/.bash_aliases
+echo "alias stop='/home/pi/portsdown/scripts/stop.sh'" >> /home/pi/.bash_aliases
+
 # Record Version Number
 head -c 9 /home/pi/portsdown/version_history.txt > /home/pi/portsdown/installed_version.txt
 echo -e "\n" >> /home/pi/portsdown/installed_version.txt
