@@ -1,0 +1,44 @@
+# Config file for Portsdown TX
+
+# TX parameters
+freqoutput=1255
+symbolrate=1000
+modulation=S2QPSK
+fec=23
+pilots=off
+frames=long
+guard=32
+qam=qpsk
+outputdevice=limedvb
+band=d3
+labelofband=70_cm
+
+# TS Parameters
+encoding=H264
+format=16:9
+pidstart=256
+pidvideo=256
+pidaudio=257
+pidpmt=4095
+serviceid=1
+call=GB3HV
+serviceprovider=IO91CC
+videoinput=linkpi
+audioinput=auto
+
+# Output Device Parameters
+limegain=98
+plutoip=192.168.4.1
+plutopwr=10
+expports=2
+exppower=7
+streamurl=rtmp://rtmp.batc.org.uk/live
+streamkey=streamname-streamkey
+udpoutaddr=192.168.2.139
+udpoutport=10000
+
+# Input Device Parameters
+linkpiip=192.168.2.141
+linkpiport=9001
+udpinaddr=192.168.2.139
+udpinport=10000
